netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: internal-policy
    namespace: default
spec:
    podSelector:
        matchLabels:
            name: internal
    policyTypes:
        - Egress
        - Ingress
    ingress:
        - { }
    egress:
        - to:
           - podSelector:
                 matchLabels:
                      name: payroll
          ports:
          - protocol: TCP
            port: 8080

          - ports:
              - port: 53
                protocol: UDP
              - port: 53
                protocol: TCP
